# Ichimoku-Cloud-Signal-Python

./: .gitignore  .gitpod.yml  .replit  AAPL Cloud.csv  AAPL.csv  Colab_Cloud_Signal_Python.ipynb  Procfile  README  README.md  RUNNERS.md  index.html  index_flask.py  main.py  output.csv  output_FTSE250.txt  output_bitfinex.txt  output_dj30.txt  output_ftse100.txt  output_kraken.txt  output_main.txt  output_nasdaq100.txt  output_oanda.txt  output_russell1000.txt  output_spdr.txt  output_spx500.txt  pandas.txt  pyproject.toml  requirements.txt  runBitfinex.py  runCurrencyFutures.py  runDJ30.py  runDJ30_source_russell.py  runFTSE100.py  runFTSE250.py  runFutures.py  runFxOanda.py  runHSI.py  runKraken.py  runNas100.py  runOanda.py  (+9 more)
asset_list/: Bitfinex.csv  DowJones30.csv  FTSE100.csv  FTSE250 copy.csv  FTSE250.csv  ForexOanda.csv  Futures.csv  FuturesCurrency.csv  HSI.csv  Kraken.csv  Kraken_1.csv  Nasdaq100.csv  Oanda.csv  Russell1000.csv  SPDR_ETFs.csv  SPX500.README  SPX500.csv  WebPageListing_20191028.xlsx
colab/: Colab_Cloud_Signal_Python.ipynb  CsvToHtml.ipynb  Merge Multi Timeframe Analysis.ipynb  loc_iloc.ipynb
css/: html_creator.css
data/: AAPL.csv  AAPL_cloud.csv  AAPL_kijun.csv  MSFT.csv  MSFT_cloud.csv  MSFT_kijun.csv  TSLA.csv  TSLA_cloud.csv  TSLA_kijun.csv
docs/: index.html
favicon/: about.txt
misc/: Untitled.ipynb  example.py  jupyter_test.py  pandas.txt  runYahooFinance.py  stockDataVisual.py
output/: DowJones30-D-kicker.csv  DowJones30-D.csv  DowJones30-W-kicker.csv  DowJones30-W.csv  FTSE100-D.csv  FTSE100-W.csv  FTSE250-D.csv  FTSE250-W.csv  (+12 more)
(+4368 files in other folders)
